--- a/Application/Admin/View/Goods/procurement.html
+++ b/Application/Admin/View/Goods/procurement.html
@@ -177,7 +177,7 @@
             // 初始化表格
             function initTable() {
                 var html = addRow(5);
-                html += '<tr><td>总计</td><td></td><td class="countNum"></td><td></td><td class="countTotal"></td><td></td><td></td></tr>';
+                html += '<tr><td>总计</td><td></td><td class="countNum"></td><td></td><td class="countTotal"></td><td></td></tr>';
                 $('#purchaseList').find('tbody').html(html);
             }
 
