--- a/Application/Admin/View/Goods/procurementDetail.html
+++ b/Application/Admin/View/Goods/procurementDetail.html
@@ -48,7 +48,7 @@
                             <div class="col-xs-12">
                                 <div class="form-group col-xs-6">
                                     <label class="label-left">编码：</label>
-                                    <span class="form-control">{$procurement.coding}</span>
+                                    <span class="form-control">{$procurement.no}</span>
                                 </div>
                                 <div class="form-group col-xs-6">
                                     <label class="label-left">时间：</label>
