--- a/Application/Admin/View/Stock/sales.html
+++ b/Application/Admin/View/Stock/sales.html
@@ -47,9 +47,18 @@
                         <div class="row">
                             <div class="col-xs-12">
                                 <div class="form-group col-xs-6">
+                                    <label class="label-left">负责人：</label>
+                                    <select name="stockLog.partner_id" class="form-control">
+                                        <option value="0">请选择：</option>
+                                        <foreach name="partnerList" item="vo">
+                                            <option value="{$vo.id}">{$vo.name}</option>
+                                        </foreach>
+                                    </select>
+                                </div>
+                                <!--<div class="form-group col-xs-6">
                                     <label class="label-left">主题：</label>
                                     <input type="text" class="form-control" name="stockLog.title" value="">
-                                </div>
+                                </div>-->
                                 <div class="form-group col-xs-6">
                                     <label class="label-left">时间：</label>
                                     <input type="date" class="form-control" name="stockLog.time" value="">
@@ -59,17 +68,8 @@
                         <div class="row" style="margin-top: 10px;">
                             <div class="col-xs-12">
                                 <div class="form-group col-xs-6">
-                                    <label class="label-left">去处：</label>
+                                    <label class="label-left">客户：</label>
                                     <input type="text" class="form-control" name="stockLog.in_transfer_out" value="">
-                                </div>
-                                <div class="form-group col-xs-6">
-                                    <label class="label-left">负责人：</label>
-                                    <select name="stockLog.partner_id" class="form-control">
-                                        <option value="0">请选择：</option>
-                                        <foreach name="partnerList" item="vo">
-                                            <option value="{$vo.id}">{$vo.name}</option>
-                                        </foreach>
-                                    </select>
                                 </div>
                             </div>
                         </div>
@@ -83,7 +83,7 @@
                                         <thead>
                                         <tr>
                                             <th>商品</th>
-                                            <th>仓库</th><th>数量</th>
+                                            <th>出货仓库</th><th>数量</th>
                                             <th>总量</th><th>条形码列表</th>
                                             <!--<th>备注</th>-->
                                             <th>操作</th>
@@ -206,15 +206,11 @@
                 $('body').find('[name*="stockLog."]').each(function () {
                     var key = $(this).attr('name');
                     var value = $(this).val();
-                    if (key == 'stockLog.title' && !value) {
+                    /*if (key == 'stockLog.title' && !value) {
                         checkStr = '主题不能为空！';
                         return false;
-                    }
-                    if (key == 'stockLog.warehouse_id' && !value) {
-                        checkStr = '请选择仓库！';
-                        return false;
-                    }
-                    if (key == 'stockLog.partner_id' && !value) {
+                    }*/
+                    if (key == 'stockLog.partner_id' && (!value || value == 0)) {
                         checkStr = '请选择负责人！';
                         return false;
                     }
@@ -242,7 +238,7 @@
                     detailList.push(detail);
                 });
                 if (detailList.length == 0) {
-                    $.alertMessager('请添加采购的商品', 'danger');
+                    $.alertMessager('请添加出库的商品', 'danger');
                 }
                 return detailList;
             }
@@ -250,7 +246,7 @@
 
             function getFormData() {
                 var stockLog = new Object();
-                stockLog.title = $('[name="stockLog.title"]').val();
+                // stockLog.title = $('[name="stockLog.title"]').val();
                 // stockLog.warehouse_id = $('[name="stockLog.warehouse_id"]').val();
                 stockLog.time = $('[name="stockLog.time"]').val();
                 stockLog.partner_id = $('[name="stockLog.partner_id"]').val();
@@ -284,7 +280,7 @@
                     } else {
                         $.alertMessager('修改成功', 'success');
                         window.setTimeout(function() {
-                            window.location = "{:U('Stock/stockLogList')}";
+                            window.location = "{:U('Stock/salesList')}";
                         }, 2000);
                     }
                 });
