--- a/Application/Admin/View/Stock/stockLogDetail.html
+++ b/Application/Admin/View/Stock/stockLogDetail.html
@@ -47,8 +47,8 @@
                         <div class="row">
                             <div class="col-xs-12">
                                 <div class="form-group col-xs-6">
-                                    <label class="label-left">主题：</label>
-                                    <span class="form-control">{$stockLog.title}</span>
+                                    <label class="label-left">编号：</label>
+                                    <span class="form-control">{$stockLog.no}</span>
                                 </div>
                                 <div class="form-group col-xs-6">
                                     <label class="label-left">时间：</label>
@@ -58,10 +58,10 @@
                         </div>
                         <div class="row" style="margin-top: 10px;">
                             <div class="col-xs-12">
-                                <div class="form-group col-xs-6">
-                                    <label class="label-left">来源：</label>
-                                    <span class="form-control">{$stockLog.in_transfer_out}</span>
-                                </div>
+                                <!--<div class="form-group col-xs-6">
+                                    <label class="label-left">主题：</label>
+                                    <span class="form-control">{$stockLog.title}</span>
+                                </div>-->
                                 <div class="form-group col-xs-6">
                                     <label class="label-left">负责人：</label>
                                     <span class="form-control">{$stockLog.partner.name}</span>
@@ -73,6 +73,7 @@
                         <div class="col-xs-12 col-lg-12">
                             <h4><switch name="stockLog.status">
                                 <case value="1">入库</case>
+                                <case value="0">调拨</case>
                                 <case value="-1">出库</case>
                             </switch>商品列表：</h4>
                             <div class="builder-table">
