--- a/Application/Admin/View/Public/layout.html
+++ b/Application/Admin/View/Public/layout.html
@@ -15,8 +15,8 @@
     <link rel="apple-touch-icon" type="image/x-icon" href="__ROOT__/favicon.ico">
     <link rel="shortcut icon" type="image/x-icon" href="__ROOT__/logo.png">
     <link rel="stylesheet" type="text/css" href="__CUI__/css/cui.min.css">
-    <link rel="stylesheet" type="text/css" href="__ADMIN_CSS__/admin.css">
-    <link rel="stylesheet" type="text/css" href="__ADMIN_CSS__/theme/default.css"><!--{:C('ADMIN_THEME')}-->
+    <link rel="stylesheet" type="text/css" href="__PUBLIC__/libs/broadin/css/admin.css">
+    <link rel="stylesheet" type="text/css" href="__PUBLIC__/libs/broadin/css/theme/default.css"><!--{:C('ADMIN_THEME')}-->
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/libs/animate/animate.min.css">
     <link rel="stylesheet" href="__PUBLIC__/libs/jquery_smartmenu/css/smartMenu.css">
     <link rel="stylesheet" href="__PUBLIC__/libs/bootstrap_datetimepicker/css/bootstrap-datetimepicker.min.css">
@@ -75,23 +75,27 @@
                 <!-- 模块菜单 -->
                 <nav class="navside navside-default" role="navigation">
                     <ul class="nav navside-nav navside-first">
-                        <li>
-                            <a data-toggle="collapse" href="#navside-collapse--1">
-                                <i class="fa fa-folder-open-o"></i>
-                                <span class="nav-label">{$menuList.label.title}管理</span>
-                                <span class="fa arrow"></span>
-                            </a>
-                            <ul class="nav navside-nav navside-second collapse in" >
-                                <foreach name="menuList.list" item="vo">
-                                    <li class="<eq name='Think.ACTION_NAME' value='$vo.name'>active</eq>">
-                                        <a href="{:U($vo['url'])}">
-                                            <i class="{$vo.icon}"></i>
-                                            <span>{$vo.title}</span>
-                                        </a>
-                                    </li>
-                                </foreach>
-                            </ul>
-                        </li>
+                        <foreach name="menuList" item="vo">
+                            <li>
+                                <a data-toggle="collapse" href="#navside-collapse--1">
+                                    <i class="{$vo.icon}"></i>
+                                    <span class="nav-label">{$vo.label.title}</span>
+                                    <span class="fa arrow"></span>
+                                </a>
+                                <ul class="nav navside-nav navside-second collapse in" >
+                                    <foreach name="vo.list" item="v">
+                                        <li class="<eq name='Think.ACTION_NAME' value='$v.name'>active</eq>">
+                                            <a href="{:U($v['url'])}">
+                                                <i class="{$v.icon}"></i>
+                                                <span>{$v.title}</span>
+                                            </a>
+                                        </li>
+                                    </foreach>
+                                </ul>
+                            </li>
+                        </foreach>
+
+
                     </ul>
                 </nav>
             </div>
@@ -145,123 +149,12 @@
     <div class="container-fluid">
         <!--<input type="hidden" id="corethink_home_img" value="__HOME_IMG__">-->
         <script type="text/javascript" src="__CUI__/js/cui.min.js"></script>
-        <script type="text/javascript" src="__ADMIN_JS__/admin.js"></script>
         <script type="text/javascript" src="__PUBLIC__/libs/bootstrap_datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
         <script type="text/javascript" src="__PUBLIC__/libs/bootstrap_datetimepicker/js/locales/bootstrap-datetimepicker.zh-CN.js" charset="UTF-8"></script>
+        <script type="text/javascript" src="__PUBLIC__/libs/broadin/js/admin.js"></script>
         <script type="text/javascript">
-            var broadin = (function(broadin) {
-                function initEvent() {
-                    $('table').on('click', '.btn-del', function() {
-                        event.preventDefault();
-                        var result = confirm('确定要执行该操作？');
-                        if (!result) return;
-                        var id = $(this).parents('tr').attr('data-id');
-                        var url = $(this).attr('href');
-                        broadin.ajaxPost(url, {id: id});
-                    });
-                    $('.dateTimePicker').datetimepicker({
-                        language: 'zh-CN',
-                        format: 'yyyy-mm-dd hh:ii:ss',
-                        autoclose: true,
-                        todayBtn: true
-                    });
-                }
-                initEvent();
-                broadin.ajaxPost = function(url, data) {
-                    $.post(url, data, function(data) {
-                        if (data.status) {
-                            $.alertMessager(data.info, 'success');
-                            window.setTimeout(function() {
-                                window.location = data.url;
-                            }, 2000);
-                        } else {
-                            $.alertMessager(data.info, 'danger');
-                        }
-                    });
-                }
-                /**
-                 * 获取表单数据并校验进行不为空校验
-                 * @param selected 表单选择器
-                 * @param dataObj 需要获取的数据对象
-                 * @param prefix 前缀
-                 * @param dataCheck 校验字段
-                 * @returns {*}
-                 */
-                broadin.getFormData = function(selected, dataObj, prefix, dataCheck) {
-                    prefix = prefix ? (prefix + '.') : '';
-                    for (var key in dataObj) {
-                        dataObj[key] = $(selected).find('[name="' + prefix + key + '"]').val() || '';
-                        if (dataCheck[key] && !dataObj[key]) {
-                            console.log(key + '---' +dataObj[key]);
-                            $.alertMessager(dataCheck[key]);
-                            return false;
-                        }
-                    }
-                    dataObj['id'] = dataObj['id'] ? dataObj['id'] : $(selected).attr('data-id');
-                    return dataObj;
-                };
-                /**
-                 * 获取表格数据并校验是否为空
-                 * @param selected 表格选择器
-                 * @param dataObj 每列数据对象
-                 * @param prefix 前缀
-                 * @param dataCheck 不能为空的字段
-                 * @returns {*}
-                 */
-                broadin.getTableData = function(selected, dataObj, prefix, dataCheck) {
-                    var objList = new Array();
-                    prefix = prefix ? (prefix + '.') : '';
-                    $(selected).find('tbody tr').each(function() {
-                        var newObj = new Object();
-                        for (var key in dataObj) {
-                            newObj[key] = $(this).find('[name="' + prefix + key + '"]').val() || $(this).find('[name="' + prefix + key + '"]').html();
-                            if (dataCheck.hasOwnProperty(key) && !newObj[key]) {
-                                newObj = null;
-                                break;
-                            }
-                        }
-                        if (newObj) {
-                            newObj['id'] = $(this).attr('data-id') || '';
-                            objList.push(newObj);
-                        }
-                    });
-                    if (objList.length == 0) {
-                        $.alertMessager('表格数据不能为空', 'danger');
-                        return false;
-                    }
-                    return objList;
-                }
-                broadin.addTableRow = function(selected, template, rows) {
-                    for (var i=1; i<rows; i++) {
-                        template += template;
-                    }
-                    $(selected).parents('tr').after(template);
-                }
-                broadin.delTableRow = function(selected, url) {
-                    var rows = $(selected).parents('tbody').find('tr').length;
-                    if (rows === 1) {
-                        $.alertMessager('必须保留一行', 'danger');
-                        return;
-                    }
-                    var tr = $(selected).parents('tr');
-                    var id = tr.attr('data-id');
-                    if (!id || !url) {
-                        tr.remove();
-                    } else {
-                        var result = confirm('确定要删除当前联系人？');
-                        if (result) {
-                            $.post(url, { id: id }, function(data) {
-                                if (data.status) {
-                                    tr.remove();
-                                } else {
-                                    $.alertMessager('删除失败', 'danger');
-                                }
-                            });
-                        }
-                    }
-                }
-                return broadin;
-            }(broadin || {}))
+            var menuList = {:json_encode($menuList)};
+            console.log(menuList);
         </script>
         <block name="script"></block>
     </div>
