--- a/Application/Admin/View/Goods/goodsEdit.html
+++ b/Application/Admin/View/Goods/goodsEdit.html
@@ -1,9 +1,7 @@
 <extend name="$_admin_public_layout"/>
 <block name="style">
     <style type="text/css">
-        .form-control[disabled], fieldset[disabled] .form-control {
-            cursor: auto;
-        }
+
 
     </style>
 </block>
@@ -37,6 +35,12 @@
                                     <label class="col-sm-2 col-lg-1 control-label">规格</label>
                                     <div class="col-sm-8 col-lg-7">
                                         <input type="text" class="form-control" required="required" name="norm" value="{$goods.norm}">
+                                    </div>
+                                </div>
+                                <div class="form-group ">
+                                    <label class="col-sm-2 col-lg-1 control-label">采购价</label>
+                                    <div class="col-sm-8 col-lg-7">
+                                        <input type="number" class="form-control" required="required" name="price" value="{$goods.price}">
                                     </div>
                                 </div>
                                 <div class="form-group ">
