--- a/Application/Admin/View/Goods/goodsGroupList.html
+++ b/Application/Admin/View/Goods/goodsGroupList.html
@@ -20,20 +20,10 @@
                         <div class="col-xs-12 col-sm-9 button-list clearfix">
                             <div class="form-group">
                                 <a title="新增" class="btn btn-primary" href="{:U('Goods/goodsGroupInfo')}">新增</a>&nbsp;
-                                <a title="删除" target-form="ids" class="btn btn-danger ajax-post confirm" model="Link" href="{:U('Goods/goodsGroupDel')}">删除</a>&nbsp;
+                                <!--<a title="删除" target-form="ids" class="btn btn-danger ajax-post confirm" model="Link" href="{:U('Goods/goodsGroupDel')}">删除</a>&nbsp;-->
                             </div>
                         </div>
-                        <!-- 搜索框 -->
-                        <div class="col-xs-12 col-sm-3 clearfix">
-                            <form class="form" method="get" action="">
-                                <div class="form-group">
-                                    <div class="input-group search-form">
-                                        <input type="text" name="keyword" class="search-input form-control" value="" placeholder="请输入ID/链接名称">
-                                        <span class="input-group-btn"><a class="btn btn-default search-btn"><i class="fa fa-search"></i></a></span>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
+
                     </div>
                 </div>
                 <!-- 数据列表 -->
@@ -45,16 +35,24 @@
                                     <table id="goodsGroupList" class="table table-bordered table-striped table-hover">
                                         <thead>
                                         <tr>
-                                            <th><input class="check-all" type="checkbox"></th>
-                                            <th>分组</th><th>备注</th>
+                                            <!--<th><input class="check-all" type="checkbox"></th>-->
+                                            <th>ID</th>
+                                            <th>分组</th>
+                                            <th>备注</th>
+                                            <th>操作</th>
                                         </tr>
                                         </thead>
                                         <tbody>
                                         <foreach name="goodsGroupList" item="vo">
                                             <tr data-id="{$vo.id}">
-                                                <td><input class="ids" type="checkbox" value="{$vo.id}" name="ids[]"></td>
+                                                <!--<td><input class="ids" type="checkbox" value="{$vo.id}" name="ids[]"></td>-->
+                                                <td>{$vo.id}</td>
                                                 <td>{$vo.name}</td>
                                                 <td>{$vo.note}</td>
+                                                <td class="operate">
+                                                    <a class="label label-warning btn-edit" title="编辑" href="{:U('Goods/goodsGroupInfo')}?id={$vo.id}" >编辑</a>
+                                                    <a class="label label-danger btn-del" title="删除" href="{:U('Goods/goodsGroupDel')}" >删除</a>
+                                                </td>
                                             </tr>
                                         </foreach>
                                         </tbody>
@@ -74,38 +72,7 @@
 <block name="script">
 <script type="text/javascript">
 
-    var tableMenuData = [
-        [{
-            text: "修改",
-            func: function() {
-                var id = $(this).attr('data-id');
-                window.location = "{:U('Goods/goodsGroupInfo')}?id=" + id;
-            }
-        }, {
-            text: "删除",
-            func: function() {
-                var result = confirm('确定要执行该操作？');
-                if (!result) return;
-                var id = $(this).attr('data-id');
-                $.post("{:U('Goods/goodsGroupDel')}", { id: id}, function(data) {
-                    if (data.status) {
-                        $.alertMessager(data.info, 'success');
-                        window.setTimeout(function() {
-                            window.location = data.url;
-                        }, 2000);
-                    } else {
-                        $.alertMessager(data.info, 'error');
-                    }
-                } );
-            }
-        }]
-    ];
-
     $(window).ready(function(e) {
-
-        $("#goodsGroupList tr").smartMenu(tableMenuData, {
-            name: "table"
-        });
 
     });
 </script>
