--- a/Application/Admin/View/Goods/goodsList.html
+++ b/Application/Admin/View/Goods/goodsList.html
@@ -20,7 +20,7 @@
                         <div class="col-xs-12 col-sm-9 button-list clearfix">
                             <div class="form-group">
                                 <a title="新增" class="btn btn-primary" href="{:U('Goods/goodsInfo')}">新增</a>&nbsp;
-                                <a title="删除" target-form="ids" class="btn btn-danger ajax-post confirm" model="Link" href="{:U('Goods/goodsDel')}">删除</a>&nbsp;
+                                <!--<a title="删除" target-form="ids" class="btn btn-danger ajax-post confirm" model="Link" href="{:U('Goods/goodsDel')}">删除</a>&nbsp;-->
                             </div>
                         </div>
                         <!-- 搜索框 -->
@@ -28,7 +28,7 @@
                             <form class="form" method="get" action="">
                                 <div class="form-group">
                                     <div class="input-group search-form">
-                                        <input type="text" name="keyword" class="search-input form-control" value="" placeholder="请输入ID/链接名称">
+                                        <input type="text" name="keyword" class="search-input form-control" value="" placeholder="请输入名称">
                                         <span class="input-group-btn"><a class="btn btn-default search-btn"><i class="fa fa-search"></i></a></span>
                                     </div>
                                 </div>
@@ -46,7 +46,7 @@
                                         <caption>商品列表</caption>
                                         <thead>
                                         <tr>
-                                            <th><input class="check-all" type="checkbox"></th>
+                                            <!--<th><input class="check-all" type="checkbox"></th>-->
                                             <th>商品名</th><th>规格</th>
                                             <th>采购价</th>
                                             <th>分组</th><th>备注</th>
@@ -56,7 +56,7 @@
                                         <tbody>
                                         <foreach name="goodsList" item="vo">
                                             <tr data-id="{$vo.id}">
-                                                <td><input class="ids" type="checkbox" value="{$vo.id}" name="ids[]"></td>
+                                                <!--<td><input class="ids" type="checkbox" value="{$vo.id}" name="ids[]"></td>-->
                                                 <td>{$vo.name}</td>
                                                 <td>{$vo.norm}</td>
                                                 <td>{$vo.price}</td>
